cluster/ceph-cluster/manifests/ceph-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  rules:
  - host: ceph-dashboard.r2dlan.me
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ceph-dashboard.r2dlan.me
    secretName: ceph-dashboard-tls
